<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LicensedMangaApp</string>    
    <string name="action_settings">Settings</string>
    <string name="browse">Browse</string>
    <string name="collection">My collection</string>
    <string name="calendar">Calendar</string>
    <string name="announcements">New licenses</string>
    <string name="updateDB">Update DB</string>
    <string name="shonen">Shonen</string>
    <string name="shojo">Shojo</string>
    <string name="seinen">Seinen</string>
    <string name="josei">Josei</string>
    <string name="yuri">Yuri</string>
    <string name="bl">BL/yaoi</string>
    <string name="manhua">Manhua</string>
    <string name="manhwa">Manhwa</string>
    <string name="kodomo">Kodomo</string>
    <string name="international">International</string>
    <string name="novel">Novels</string>
    <string name="hentai">Hentai</string>
    <string name="artbook">Artbooks</string>
    <string name="others">Others</string>
    <string name="own">Own: </string>
    <string name="read">Read: </string>
    <string name="numSeries">Series: </string>
    <string name="toRead">To Read</string>
    <string name="myCollection">My Collection</string>
    <string name="watchlist">Watchlist</string>
    <string name="serie_name">Title: </string>
    <string name="serie_type">Type: </string>
    <string name="serie_state">State: </string>
    <string name="serie_num">Num vols: </string>
    <string name="title_activity_series_menu">SeriesMenuActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_serie_info">SerieInfoActivity</string>
    <string name="title_activity_announcements">AnnouncementsActivity</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_collection_menu">CollectionMenuActivity</string>
    <string name="title_activity_to_read">ToReadActivity</string>
    <string name="title_activity_series_list">SeriesListActivity</string>
    <string name="title_activity_watchlist">WatchlistActivity</string>
    <string name="title_activity_prova">ProvaActivity</string>
    <string name="title_activity_parse_json">ParseJSON</string>

</resources>
