<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.licensedmanga.licensedmangaapp.SeriesMenuActivity" >
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/shonen_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="3"      
        android:text="@string/shonen" />

    <Button
        android:id="@+id/shojo_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="1"      
        android:text="@string/shojo" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/seinen_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="4"    
        android:text="@string/seinen" />

    <Button
        android:id="@+id/josei_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="2"     
        android:text="@string/josei" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/yuri_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="6"      
        android:text="@string/yuri" />

    <Button
        android:id="@+id/bl_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
      	android:onClick="goToSerie"  
        android:tag="7"    
        android:text="@string/bl" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/manhua_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="8"     
        android:text="@string/manhua" />

    <Button
        android:id="@+id/manhwa_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="9"      
        android:text="@string/manhwa" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/kodomo_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="5"       
        android:text="@string/kodomo" />

    <Button
        android:id="@+id/international_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="13"      
        android:text="@string/international" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/novel_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="10"     
        android:text="@string/novel" />

    <Button
        android:id="@+id/hentai_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="11"  
        android:text="@string/hentai" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/artbook_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="12"     
        android:text="@string/artbook" />

    <Button
        android:id="@+id/others_btn"
        android:textSize="16sp"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:onClick="goToSerie"  
        android:tag="14"    
        android:text="@string/others" />

    </LinearLayout>

    

</LinearLayout>
