<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.licensedmanga.licensedmangaapp.CollectionMenuActivity" >

    <TextView
        android:id="@+id/own"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/own" />
    
    <TextView
        android:id="@+id/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/own"
        android:text="@string/read" /> 
         
    <TextView
        android:id="@+id/numSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/read"
        android:text="@string/numSeries" /> 

    <Button
        android:id="@+id/toRead_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numSeries"
        android:layout_marginTop="54dp"
        android:onClick="goToReadList" 
        android:text="@string/toRead" />
    
    <Button
        android:id="@+id/myCollection_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toRead_btn"
        android:layout_centerHorizontal="true"
        android:onClick="goToMyCollection" 
        android:text="@string/myCollection" />
    
    <Button
        android:id="@+id/watchlist_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myCollection_btn"
        android:layout_centerHorizontal="true"
        android:onClick="goToWatchlist" 
        android:text="@string/watchlist" />

</RelativeLayout>
