<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.licensedmanga.licensedmangaapp.SerieInfoActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/serie_name"
        android:textSize="32sp"
        android:text="@string/serie_name" /> 
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/serie_type"
        android:text="@string/serie_type"
        android:layout_below="@+id/serie_name" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/serie_state"
        android:text="@string/serie_state" 
		android:layout_below="@+id/serie_type" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/serie_num"
        android:text="@string/serie_num" 
		android:layout_below="@+id/serie_state" />
    
    <ListView
        android:id="@+id/listSeriesVolumes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serie_num"
     />

</RelativeLayout>
