<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.licensedmanga.licensedmangaapp.MainActivity" >
    
    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher" />
	
    <Button
        android:id="@+id/browsebtn"
        android:textSize="16sp"
        android:layout_marginTop="14dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageLogo"
        android:onClick="browse"        
        android:text="@string/browse" />
    
    <Button
        android:id="@+id/collectionbtn"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"       
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/browsebtn"
        android:onClick="goToCollectionMenu"  
        android:text="@string/collection" />
    
    <Button
        android:id="@+id/calendarbtn"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/collectionbtn"
        android:onClick="goToCalendar"  
        android:text="@string/calendar" />
    
    <Button
        android:id="@+id/announcementsbtn"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"       
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/calendarbtn"
        android:onClick="goToAnnouncements"  
        android:text="@string/announcements" />
    
     <Button
        android:id="@+id/buttonGet"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"       
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/announcementsbtn"         
        android:text="@string/updateDB" />

    

</RelativeLayout>
